--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^2.9.3",
     "ionicons": "^5.1.2",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^1.11.1",
     "ng2-charts": "^2.3.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
